fix: port toggle icon fix and dyslexic letter-spacing removal

--- a/assets/_general.scss
+++ b/assets/_general.scss
@@ -18,9 +18,6 @@
 
 .dyslexic *:not([class*="fa-"]):not(.katex):not(.katex *) {
     font-family: 'OpenDyslexic', sans-serif !important;
-    font-size-adjust: .45;
-    letter-spacing: -0.03em;
-    word-spacing: -0.1em;
 }
 
 .dyslexic h1 {
